package com.justas.weather.core.domain.model

data class CommonCoordinates(
    val latitude: Double? = null,
    val longitude: Double? = null,
)
